# edu-ntnu-inft2503-exam-H24

./: CMakeLists.txt  conanfile.txt
.devcontainer/: Dockerfile
apps/: CMakeLists.txt  Run.cpp  Task_5.cpp  Task_6.cpp  Task_7.cpp  Task_8.cpp  Task_9.cpp
include/Example_library/: sum.hpp
scripts/: conan_build.bat
src/: CMakeLists.txt
src/Example_library/: CMakeLists.txt  sum.cpp
test/: CMakeLists.txt  sum-T.cpp
